--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>Book detail</h1>
+ <table>
+    <tbody>
+  <% @books.each do |book| %>
+
+     <tr>
+       <td><%= book.title%></td>
+       <td><%= book.opinion%></td>
+       <td><%= link_to "show", book_path(book.id)%></td>
+       <td><%= link_to "Edit", edit_book_path(book.id)%></td>
+       <td><%= link_to "Destroy", book_path(book.id),method: :delete, "data-confirm" => "本当に削除しますか？"%></td>
+     </tr>
+  <% end %>
+  </tbody>
+ </table>
