--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,12 +1,12 @@
-<h1>投稿フォームを作ります</h1>
+<!--<h1>投稿フォームを作ります</h1>-->
 
 <h1>New book</h1>
-<%= form_with model: @book do |f| %>
+<%= form_with model:@book_opinion do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
 
   <h4>Opinion</h4>
-  <%= f.text_area :opinion %>
+  <%= f.text_area :body %>
 
   <div>
     <%= f.submit 'Create Book' %>
