--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,18 +1,26 @@
-<h1>welcome to
- <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>
- <strong>Bookers</strong>
- !!
-</h1>
+<main>
+  <p id="notice"><%= flash[:notice] %></p>
+  <div class="container">
+    <div class="row">
+      <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+        <h1>welcome to <i class="fas fa-book" aria-hidden="true"></i><strong>Bookers</strong> !!</h1>
 
-<p>in
-<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H384h32c17.7 0 32-14.3 32-32s-14.3-32-32-32V384c17.7 0 32-14.3 32-32V32c0-17.7-14.3-32-32-32H384 96zm0 384H352v64H96c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16zm16 48H336c8.8 0 16 7.2 16 16s-7.2 16-16 16H144c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>
-<strong>Bookers</strong>,</p>
+        <p>
+          In <i class="fas fa-book" aria-hidden="true"></i><strong>Bookers</strong>,
+        </p>
 
-<P>you can share and exchange your opinions , inpressions , and emotions </br>
-bout various books!</P>
-<div>
-  <%= link_to "Log in", new_user_session_path %>
-</div>
-<div>
-<%= link_to "Sign up",new_user_registration_path %>
-</div>
+        <p>you can share and exchange  your opinions , inpressions , and emotions</p>
+        <p> about various books!</p>
+
+        <div class="btn-wrapper col-10 mx-auto">
+          <div class="row">
+            <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
+          </div>
+          <div class="row">
+            <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
