--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,32 @@
-<h1>indexです</h1>
+<div class="container">
+    <div class="row">
+        <%= render 'books/list', user: @user, book_opinion: @book_opinion %>
+        <div class="col-md-8 offset-md-1">
+            <h1>Users</h1>
+            <table class ="table users">
+                <thead>
+                  <tr>
+                    <th>image</th>
+                    <th>name</th>
+                    <th colspan="3"></th>
+                  </tr>
+                </thead>
+                <% @users.each do |user_all| %>
+                    <tbody>
+                        <tr>
+                            <td><%=image_tag user_all.get_profile_image(150,150) %></td>
+                            <td><%= user_all.name %></td>
+                            <td><%= link_to "Show", user_path(user_all.id) %></td>
+                        </tr>
+                    </tbody>
+                <% end %>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
